unpackaged/main/default/objects/AcctSeed__Ledger__c/AcctSeed__Ledger__c.object-meta.xml
<CustomObject>
    <description>Used to associate and aggregate financial transaction or budget entries with a specific entity.</description>
    <label>Ledger</label>
    <nameField>
        <label>Ledger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ledgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>