unpackaged/main/default/objects/AcctSeed__Ledger__c/fields/AcctSeed__Billing_Activity_Statement_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Activity_Statement_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the billing activity statement format here. The billing activity statement format is the PDF format used to send billing activity statements to a customer.</inlineHelpText>
    <label>Billing Activity Statement Format</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Activity Statement</value>
        </filterItems>
        <infoMessage>The type on the PDF Format must be Activity Statement</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipLabel>Ledgers (Billing Activity Statement Format)</relationshipLabel>
    <relationshipName>Billing_Activity_Statement_Formats</relationshipName>
    <type>Lookup</type>
</CustomField>