unpackaged/main/default/objects/AcctSeed__Ledger__c/fields/AcctSeed__Default_Billing_Format__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Default_Billing_Format__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select your primary billing format here. When you create a billing and leave this field blank, the default billing format will be selected after you press save.</inlineHelpText>
    <label>Default Billing Format</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Billing</value>
        </filterItems>
        <infoMessage>The type on the PDF Format must be Billing</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
    <relationshipLabel>Ledgers</relationshipLabel>
    <relationshipName>Default_Billing_Formats</relationshipName>
    <type>Lookup</type>
</CustomField>