unpackaged/main/default/objects/AcctSeed__Ledger__c/fields/AcctSeed__Financial_Reporter_Settings__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Financial_Reporter_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Reporter Settings</label>
    <referenceTo>AcctSeed__Financial_Reporter_Settings__c</referenceTo>
    <relationshipLabel>Ledgers</relationshipLabel>
    <relationshipName>Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>