unpackaged/main/default/objects/AcctSeed__Ledger__c/fields/AcctSeed__Sales_Tax_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sales_Tax_Company_Code__c</fullName>
    <inlineHelpText>Company Code in Avatax</inlineHelpText>
    <label>Sales Tax Company Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>