unpackaged/main/default/objects/AcctSeed__Ledger__c/fields/AcctSeed__Tax_Settings__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Tax_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The tax settings that will be associated with the ledger.</inlineHelpText>
    <label>Tax Settings</label>
    <referenceTo>AcctSeed__Tax_Settings__c</referenceTo>
    <relationshipLabel>Ledgers</relationshipLabel>
    <relationshipName>Ledgers</relationshipName>
    <type>Lookup</type>
</CustomField>