unpackaged/main/default/objects/AcctSeed__Ledger__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>