unpackaged/main/default/objects/AcctSeed__Ledger__c/listViews/AcctSeed__Transactional.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Transactional</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Type__c</columns>
    <columns>AcctSeed__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Type__c</field>
        <operation>equals</operation>
        <value>Transactional</value>
    </filters>
    <label>Transactional</label>
</ListView>